--- a/LwsAuthUI/Views/Home/Contact.cshtml
+++ b/LwsAuthUI/Views/Home/Contact.cshtml
@@ -15,3 +15,7 @@
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<form action="/api/secureapi/getperson">
+    <input type="submit" class="btn btn-success" value="Go to Secure API" />
+</form>
