--- a/LwsAuthUI/Views/Account/Register.cshtml
+++ b/LwsAuthUI/Views/Account/Register.cshtml
@@ -17,6 +17,13 @@
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
+
+    <div class="form-group">
+        <div class="col-md-12">
+            <p>(For this demo there is only a limit of 1 character!!!)</p>
+        </div>
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -34,8 +41,8 @@
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
-}
+    }
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
