--- a/LwsAuthUI/Views/Account/Register.cshtml
+++ b/LwsAuthUI/Views/Account/Register.cshtml
@@ -1,6 +1,11 @@
 ﻿@model LwsAuthUI.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+
+    // Added by Lee
+    List<SelectListItem> roleSelectListItems = new List<SelectListItem>();
+    roleSelectListItems.Add(new SelectListItem { Text = "Main", Value = "Main" });
+    roleSelectListItems.Add(new SelectListItem { Text = "Office", Value = "Office" });
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -36,13 +41,23 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
+    //Added by Lee
+    <div class="form-group">
+        @Html.LabelFor(m => m.Role, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.Role, roleSelectListItems, new { @class = "form-control" })
+        </div>
+    </div>
+
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
-    }
+}
 
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
