--- a/LwsAuthUI/Views/Account/Register.cshtml
+++ b/LwsAuthUI/Views/Account/Register.cshtml
@@ -8,51 +8,53 @@
     roleSelectListItems.Add(new SelectListItem { Text = "Office", Value = "Office" });
 }
 
-<h2>@ViewBag.Title.</h2>
-
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
+<div class="card">
+    <div class="card-header">
+        <h4>@ViewBag.Title - Create a new account</h4>
     </div>
+    <div class="card-body">
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-2" })
+            <div class="col-4">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            </div>
+        </div>
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-12">
-            <p>(For this demo there is only a limit of 1 character!!!)</p>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Password, new { @class = "col-2" })
+            <div class="col-12">
+                <p>(For this demo there is only a limit of 1 character!!!)</p>
+            </div>
+            <div class="col-4">
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            </div>
         </div>
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-2" })
+            <div class="col-4">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
 
-    //Added by Lee
-    <div class="form-group">
-        @Html.LabelFor(m => m.Role, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(m => m.Role, roleSelectListItems, new { @class = "form-control" })
+        @*Added by Lee*@
+        <div class="form-group">
+            @Html.LabelFor(m => m.Role, new { @class = "col-2 control-label" })
+            <div class="col-4">
+                @Html.DropDownListFor(m => m.Role, roleSelectListItems, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-outline-primary" value="Register" />
+            </div>
         </div>
     </div>
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
+</div>
 }
 
 @section Scripts {
